# DSP-lab-hrtf

./: .gitignore  README.md  pyproject.toml
src/dsp_lab_hrtf/: __init__.py  app.py  audio_process.py  barycentric.py  context.py  main_audio.py  main_gui.py  pos.txt  resampler.py  ring_buffers.py  test.py  test_call.py  test_call_gui.py  test_funcs.py  test_gui.py  wavefile.py
src/dsp_lab_hrtf/data/sofa_files/: hrtf b_nh169.sofa
src/dsp_lab_hrtf/tests/: test_call.py  test_call_1pt.py  test_gui_copy.py
